make buttons more align + fix navbar

--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -73,6 +73,12 @@ hr{display:block; width:100%; height:1px; border:solid; border-width:1px 0 0 0;}
 .font-x2{font-size:1.8rem;font-weight: bold;}
 .font-x3{font-size:2.8rem;}
 .font-row{font-size:1.2rem;font-weight: bold;text-align: center;padding-top: 30px;}
+.buttonleft{
+    font-size:1.2rem;font-weight: bold;text-align: center;
+    margin: 0 auto;
+    position: relative;
+    padding-left: 34%;
+}
 
 .wrapper{display:block; width:100%; margin:0; padding:0; text-align:left; word-wrap:break-word;}
 #header, #breadcrumb, .container, #footer, #copyright{display:block; margin:0 auto;}
