--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -31,10 +31,10 @@ File: Layout CSS
 
 /* Header
 --------------------------------------------------------------------------------------------------------------- */
-#header{position:relative; padding:30px 0;}
+#header{position:relative; padding:10px 0;}
 
-#header #logo{margin-top:16px;}
-#header #logo h1{margin:0; padding:0; font-size:22px; text-transform:uppercase;}
+#header #logo{margin-top:16px;font-size: 20px;text-transform: uppercase;}
+
 
 
 /* Homepage Specific - <body id="top" class="homepage">
@@ -325,7 +325,7 @@ table a, #comments a{background-color:inherit;}
 /* Max Wrapper Width - Laptop, Desktop etc.
 --------------------------------------------------------------------------------------------------------------- */
 @media screen and (min-width:978px){
-	#header, #breadcrumb, .container, #footer, #copyright{max-width:978px;}
+	#header, #breadcrumb, .container, #footer, #copyright{max-width:1400px;}
 }
 
 
